<resources>
    <string name="app_name">StoryApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="lorem">orem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum nec quam et volutpat. Mauris blandit, massa vitae consectetur mattis, tortor dui dignissim lorem, eget eleifend enim eros ac risus.</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="preview">Preview</string>
    <string name="description">Description</string>
    <string name="sign_in_as_guest">Sign In As Guest</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="story_activity">Story Activity</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="add">Add</string>
    <string name="upload">Upload</string>
    <string name="date">2022–11–25</string>
    <string name="chooser">Choose a picture</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Show Location</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="add_location">Add Story Location</string>
</resources>